--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-node": "^0.0.1-security",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
